--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: financial_literacy_game
+ame: financial_literacy_game
 description: A simple app to teach basics of financial literacy.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -10,12 +10,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # Both the version and the builder number may be overridden in flutter
 # build by specifying --build-name and --build-number, respectively.
 # In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
+
 version: 1.0.0+1
 
 environment:
@@ -38,14 +33,14 @@ dependencies:
   #cupertino_icons: ^1.0.2
   auto_size_text: ^3.0.0
   flutter_riverpod: ^2.3.2
-  carousel_slider: ^4.2.1
+  carousel_slider: ^5.1.1
   defer_pointer: ^0.0.2
   confetti: ^0.7.0
   shared_preferences: ^2.1.0
   device_info_plus: ^8.2.2
   firebase_core: ^2.30.0
   cloud_firestore: ^4.7.1
-  intl: ^0.19.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
@@ -102,3 +97,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
